k8s/base/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-app
  namespace: tequity
  labels:
    app: admin-app
spec:
  type: ClusterIP
  selector:
    app: admin-app
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
      name: http
