k8s/base/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-app
  namespace: tequity
  labels:
    app: main-app
spec:
  type: ClusterIP
  selector:
    app: main-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
